# RouteXplorer

./: .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: point-release.yaml  pylint.yaml
experiments/: execute.py  input.txt  utils.py
experiments/algorithms/: Algorithm.py  AntColony.py  BruteForceSearch.py  GeneticSearch.py  utils.py
experiments/result_experiments/ACO_results/: 7_points_ACO.csv  8_points_ACO.csv  9_points_ACO.csv  ACO_52.csv
experiments/result_experiments/AG_results/: 52_points_AG.csv  7_points_AG.csv  8_points_AG.csv  9_points_AG.csv
experiments/result_experiments/BruteForceSearch_results/: 7_points_BF.csv  8_points_BF.csv  9_points_BF.csv
experiments/result_experiments/test_data/: berlin7.tsp  berlin8.tsp  berlin9.tsp
experiments/utils/: Grafo.py  Graph.py  Lists.py  Utils.py  distance_calculator.py  input_reader.py
routexplorer/algorithms/: Algorithm.py  BruteForceSearch.py
routexplorer/utils/: Graph.py  Utils.py  input_reader.py
src/routexplorer/algorithms/: Algorithm.py  AntColony.py
src/routexplorer/utils/: Graph.py  input_reader.py
visualization/: time_of_execution.py
