[tool.poetry]
name = "routexplorer"
version = "0.0.0"
description = "RouteXplorer is a lib developed to optimize routes in Complete Graphs."
authors = ["vsg-root <vsg.dev.tech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
repository = "https://github.com/moesio-f/py-abm"
